--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -1,3 +1,15 @@
 /* You can add custom styles here. */
 
 // @import "plugins/numbered";
+.book-menu li>span{
+  font-weight: bolder;
+  &::after{
+    content: "📌";
+  }
+}
+
+.active {
+  &::after{
+    content: "🚀";
+  }
+}
