--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -1,6 +1,6 @@
 {{ if not (.Page.Scratch.Get "mermaid") }}
 <!-- Include mermaid only first time -->
-<script src="{{ "mermaid.min.js" | relURL }}"></script>
+<script src="https://unpkg.com/browse/mermaid@8.8.4/dist/mermaid.min.js"></script>
 <script>
 mermaid.initialize({
   flowchart: { useMaxWidth:true }
